SAKIII-1706 In IE 7, search result wrap to next line fixed.

--- a/dev/_css/sakai/sakai.search_b.css
+++ b/dev/_css/sakai/sakai.search_b.css
@@ -111,7 +111,7 @@
     width: 100%;
 }
 .search_content_main .search_results_container_sub {
-    width: 75% !important;
+    width: 74% !important;
 }
 .search_top_rounded {
     background: transparent url(../../_images/search_results_tl.png) top left no-repeat;
